<resources>
    <string name="app_name">Sumble</string>
    <string name="param">Paramètres</string>
    <string name="scores">Scores</string>
    <string name="modeDeJeuTitre">Sélectionnez un mode de jeu</string>
    <string name="limitless" translatable="false">Limitless</string>
    <string name="challenge" translatable="false">Challenge</string>
    <string name="choixDiff">Choisissez la difficulté</string>
    <string name="facile">Facile</string>
    <string name="intermediaire">Intermédiaire</string>
    <string name="difficile">Difficile</string>
    <string name="lancerPartie">Lancer la partie</string>
    <string name="bestScorePerso">Meilleurs scores perso</string>
    <string name="bestScoreMondiaux">Meilleurs scores mondiaux</string>
    <string name="perdu">Vous avez perdu !</string>
    <string name="continuer">Appuyez sur ok pour continuer</string>
    <string name="infos">Informations</string>
    <string name="finjeu">Fin du jeu</string>
    <string name="votreScore">Vous avez réalisé un score de </string>
    <string name="recommencer">Recommencer</string>
    <string name="retourMenu">Retour au menu</string>
    <string name="reglages">Réglages</string>
    <string name="langue">Langues</string>
    <string name="francais">Français</string>
    <string name="anglais">Anglais</string>
    <string name="selectionLangue">Séléctionnez la langue</string>
    <string name="traduire">Traduire</string>
    <string name="entrerNum">Entrez un numéro</string>
    <string name="envoyer">Partager votre score</string>
</resources>
