<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/backgroundBleuFonce"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <TextView
            android:text="@string/param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/param"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/chevronleft"
            android:layout_marginBottom="18dp" />

        <ImageView
            android:id="@+id/chevronleft"
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:layout_alignBottom="@+id/param"
            android:layout_alignParentStart="true"
            android:background="@drawable/chevronleft" />

        <TextView
            android:text="@string/scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/chevronright" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/chevronright"
            android:layout_alignTop="@+id/score"
            android:layout_alignParentEnd="true"
            android:background="@drawable/chevronright" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/backgroundBleuClair"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/titre">

            <ImageView
                android:id="@+id/logo"
                android:layout_height="100dp"
                android:background="@drawable/logo"
                android:layout_width="130dp"
                android:layout_above="@+id/modeJeuTitre"
                android:layout_centerHorizontal="true" />

            <TextView
                android:text="@string/modeDeJeuTitre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modeJeuTitre"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:background="@color/jaune"
                android:fontFamily="Calibri"
                android:padding="5dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titre"
            android:layout_alignParentStart="true"
            android:layout_marginTop="26dp"
            android:id="@+id/buttons">

            <Button
                android:text="@string/limitless"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/limitless"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/backgroundbuttonjaune"
                android:textSize="24sp"
                android:textAllCaps="false" />

            <Button
                android:text="@string/challenge"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/challenge"
                android:layout_marginTop="15dp"
                android:background="@drawable/backgroundbuttonjaune"
                android:layout_below="@+id/limitless"
                android:layout_alignStart="@+id/limitless"
                android:textSize="24sp"
                android:textAllCaps="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/buttons"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:background="@drawable/backgrounddiff"
            android:id="@+id/choixDiff">

            <TextView
                android:text="@string/choixDiff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/difficulte"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:id="@+id/radiogroup">

                <RadioButton
                    android:text="@string/facile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/facile"
                    android:layout_weight="1"
                    android:textSize="18sp" />

                <RadioButton
                    android:text="@string/intermediaire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/moyen"
                    android:layout_weight="1"
                    android:textSize="18sp" />

                <RadioButton
                    android:text="@string/difficile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/difficile"
                    android:layout_weight="1"
                    android:textSize="18sp" />

            </RadioGroup>

            <ImageView
                android:id="@+id/infosDiff"
                android:layout_weight="1"
                android:layout_marginEnd="21dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/difficulte"
                android:layout_alignParentEnd="true"
                android:background="@drawable/info" />

        </RelativeLayout>

        <Button
            android:text="@string/lancerPartie"
            android:layout_width="300dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:id="@+id/lancerPartie"
            android:layout_height="75dp" />

    </RelativeLayout>

</RelativeLayout>